# yellow_pages_ajax_scraper

./: LICENSE  README.md  pyproject.toml  scraper.py
