[tool.poetry]
name = "yellowscrape-master"
version = "0.1.0"
description = ""
authors = ["Daniel Dimitrov <dani2dim@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Scrapy = "^2.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
